@@ -1,3 +1,5 @@
+import sun.jvmstat.monitor.MonitoredVmUtil.jvmArgs
+
 plugins {
     java
     id("org.springframework.boot") version "3.4.1" apply false
@@ -23,9 +25,12 @@ subprojects {
         "testImplementation"(platform("org.junit:junit-bom:5.10.2"))
         "testImplementation"("org.junit.jupiter:junit-jupiter")
         "testRuntimeOnly"("org.junit.platform:junit-platform-launcher")
+        "testImplementation"("org.mockito:mockito-core:5.11.0")
+        "testImplementation"("org.mockito:mockito-junit-jupiter:5.11.0")
     }
 
     tasks.withType<Test> {
         useJUnitPlatform()
+        jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
     }
 }
